llvm/test/fail/50revers.dna
def reverse

   def length is int: s as byte[]
     var result is int
      result := 0
      loop:
         if s[result] = '\0':
            return: result
         result := result + 1

   def reverse: s r as byte[]
      var i l is int
      l := length(s)
      i := 0
      loop:
         if i >= l:
            r[i] := '\0'
            exit
         r[i] := s[l-i-1]
         i := i+1

   var p is byte[20]

   reverse: "\n!dlrow olleH", p
   writeString: p
